# SimpleRestaurantApiServer

./: Cargo.toml  README.md
sql/: db.sql
src/: db.rs  error.rs  main.rs
src/item/: data.rs  handler.rs  mod.rs  routes.rs
src/table/: handler.rs  mod.rs  routes.rs
