[package]
name = "simple_api_restaurant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["macros"] }
warp = "0.3.2"
mobc-postgres = { version = "0.7.0", features = ["with-chrono-0_4"] }
mobc = "0.7.0"
postgres = "0.19.3"
actix-web = "4.0.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }